# kaggle-base

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  README.md  initialize.sh  pyproject.toml  run.py  tasks.py  transform-kaggle-notebook.sh
docker/: Dockerfile  exec.sh  kill.sh  pull.sh  run.sh
docs/: submission.md
scripts/: gen-new-exp.sh  initialize.sh  jupyter.sh  kaggle-utils.sh  run.sh  streamlit.sh  submit.sh
scripts/docker/: exec.sh  kill.sh  pull.sh  run.sh  stop.sh
scripts/kaggle/: download.sh  generate-notebook.sh  submissions.sh  submit.sh
src/: __main__.py  const.py  filepath.py  run.py  types.py  utils.py
src/config/: __init__.py  base.py
src/config/fe/: fe000.py
src/config/run/: run000.py
src/data/: __init__.py  load.py
src/exp/common/: const.py
src/exp/exp000/: config.py  main.py
src/fe/: 00_hoge.py
src/features/: __init__.py  base.py  preprocess.py  runner.py
src/models/: __init__.py  base.py  evaluate.py  kfold.py  model_cb.py  model_lgbm.py  model_lr.py  model_ridge.py  model_xgb.py  runner.py
src/utils/: __init__.py  augmentations.py  config.py  file.py  joblib.py  kfold.py  logger.py  memory.py  metrics.py  notify.py  seed.py  time.py
src/utils/models/: base.py  gbdt.py  linear.py  mlp.py
src/ver001/: __main__.py
